--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react-native-elements": "^2.0.4",
     "react-native-web": "~0.11.7",
     "react-navigation": "2.0.1",
-    "react-navigation-stack": "^2.8.2"
+    "react-navigation-stack": "^2.8.2",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
