--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "2.0.1",
     "react-navigation-stack": "^2.8.2",
-    "react-redux": "^7.2.0",
+    "react-redux": "5.0.7",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
