--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
     "expo-status-bar": "^1.0.2",
+    "global": "^4.4.0",
     "react": "~16.11.0",
+    "react-devtools": "^4.8.2",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-elements": "^2.0.4",
