--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.6.0",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
     "expo-status-bar": "^1.0.2",
@@ -16,6 +17,7 @@
     "react-devtools": "^4.8.2",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-datepicker": "1.7.2",
     "react-native-elements": "^2.0.4",
     "react-native-web": "~0.11.7",
     "react-navigation": "2.0.1",
