--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-datepicker": "1.7.2",
     "react-native-elements": "^2.0.4",
+    "react-native-swipeout": "2.3.3",
     "react-native-web": "~0.11.7",
     "react-navigation": "2.0.1",
     "react-navigation-stack": "^2.8.2",
