--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/datetimepicker": "^2.6.0",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
+    "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "global": "^4.4.0",
     "react": "~16.11.0",
